enabled driving from drived class & fixed create_object macro. doesn't work yet.

--- a/object-unitTest/object-unitTest.vcxproj
+++ b/object-unitTest/object-unitTest.vcxproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cache_UnitTest.cpp" />
+    <ClCompile Include="Inhertiance_UnitTest.cpp" />
     <ClCompile Include="Object_UnitTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
