--- a/object/object.vcxproj
+++ b/object/object.vcxproj
@@ -127,23 +127,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="B.c" />
     <ClCompile Include="Cache.c" />
     <ClCompile Include="Globals.c" />
-    <ClCompile Include="Mat.c" />
+    <ClCompile Include="InheritTest.c" />
+    <ClCompile Include="Mat4Test.c" />
     <ClCompile Include="object.c" />
     <ClCompile Include="ObjectTest.c" />
+    <ClCompile Include="SuperMat4Test.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="A.h" />
-    <ClInclude Include="B.h" />
     <ClInclude Include="Cache.h" />
     <ClInclude Include="ExportDefs.h" />
     <ClInclude Include="Globals.h" />
-    <ClInclude Include="Inherit.h" />
-    <ClInclude Include="Mat.h" />
+    <ClInclude Include="InheritTest.h" />
+    <ClInclude Include="Mat4Test.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="ObjectTest.h" />
+    <ClInclude Include="SuperMat4Test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
