intermidiat. (in middle of enabling overridding)
Former-commit-id: 727210dccb6a05aa6fc1c22e9c42983d9bbe9191

--- a/object/object.vcxproj
+++ b/object/object.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="ExportDefs.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="InheritTest.h" />
+    <ClInclude Include="LinkedLists.h" />
     <ClInclude Include="Mat4Test.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="ObjectTest.h" />
