--- a/object/object.vcxproj
+++ b/object/object.vcxproj
@@ -92,7 +92,6 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalOptions>/FORCE:MULTIPLE %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -125,13 +124,13 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalOptions>/FORCE:MULTIPLE %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Cache.c" />
     <ClCompile Include="Globals.c" />
     <ClCompile Include="InheritTest.c" />
+    <ClCompile Include="LinkedLists.c" />
     <ClCompile Include="Mat4Test.c" />
     <ClCompile Include="object.c" />
     <ClCompile Include="ObjectTest.c" />
