--- a/Cache_UnitTest/Cache_UnitTest.vcxproj
+++ b/Cache_UnitTest/Cache_UnitTest.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CacheNoNames_UnitTest.cpp" />
     <ClCompile Include="Cache_UnitTest.cpp" />
     <ClCompile Include="Object_UnitTest.cpp" />
     <ClCompile Include="pch.cpp">
