--- a/Object_unitTest/Object_unitTest.vcxproj
+++ b/Object_unitTest/Object_unitTest.vcxproj
@@ -37,6 +37,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CacheClassTest.cpp" />
     <ClCompile Include="InheritTest.cpp" />
     <ClCompile Include="Object_UnitTest.cpp" />
     <ClCompile Include="test.cpp" />
