cache tests passing, cache class in cache.h made a few changes in object, other users of object not fixed yet.

--- a/Object_unitTest/Object_unitTest.vcxproj
+++ b/Object_unitTest/Object_unitTest.vcxproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <ClCompile Include="CacheClassTest.cpp" />
     <ClCompile Include="InheritTest.cpp" />
+    <ClCompile Include="InMemoryCacheTest.cpp" />
     <ClCompile Include="Object_UnitTest.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp">
