--- a/Cache_UnitTest/Cache_UnitTest.vcxproj
+++ b/Cache_UnitTest/Cache_UnitTest.vcxproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <ClCompile Include="CacheNoNames_UnitTest.cpp" />
     <ClCompile Include="Cache_UnitTest.cpp" />
+    <ClCompile Include="InMemoryCacheTest.cpp" />
     <ClCompile Include="Object_UnitTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
