changes in cache,little fixes.
Former-commit-id: 3e5f18d3967b09bc237db29971d64b63ec2e6e13

--- a/Object_unitTest/Object_unitTest.vcxproj
+++ b/Object_unitTest/Object_unitTest.vcxproj
@@ -37,7 +37,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CacheClassTest.cpp" />
+    <ClCompile Include="CacheTest.cpp" />
     <ClCompile Include="InheritTest.cpp" />
     <ClCompile Include="InMemoryCacheTest.cpp" />
     <ClCompile Include="Object_UnitTest.cpp" />
