--- a/object/object.vcxproj
+++ b/object/object.vcxproj
@@ -134,6 +134,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Cache.c" />
+    <ClCompile Include="CacheTest.c" />
     <ClCompile Include="Globals.c" />
     <ClCompile Include="HeapCache.c" />
     <ClCompile Include="iCache.c" />
@@ -142,10 +143,12 @@
     <ClCompile Include="Mat.c" />
     <ClCompile Include="object.c" />
     <ClCompile Include="ObjectTest.c" />
+    <ClCompile Include="ScopeTest.c" />
     <ClCompile Include="SuperMat.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cache.h" />
+    <ClInclude Include="CacheTest.h" />
     <ClInclude Include="ExportDefs.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="HeapCache.h" />
@@ -155,6 +158,7 @@
     <ClInclude Include="Mat.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="ObjectTest.h" />
+    <ClInclude Include="ScopeTest.h" />
     <ClInclude Include="SuperMat.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
