--- a/object/object.vcxproj.filters
+++ b/object/object.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClCompile Include="LinkedLists.c">
       <Filter>Infra</Filter>
     </ClCompile>
+    <ClCompile Include="obj_lifecycle_management.c">
+      <Filter>OOP</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cache.h">
@@ -89,6 +92,18 @@
     </ClInclude>
     <ClInclude Include="LinkedLists.h">
       <Filter>Infra</Filter>
+    </ClInclude>
+    <ClInclude Include="obj_base_structs.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
+    <ClInclude Include="class_def_macros.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
+    <ClInclude Include="inheritence_def_macros.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
+    <ClInclude Include="obj_lifecycle_management.h">
+      <Filter>OOP</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
