more order and cosmetics...
1. The main file to include now is COOP.h
2. Adding proj for extraction of test proxy code aside from infra.


Former-commit-id: c1792ad800bdc8411a78a3b64e5da3b6dda81d88

--- a/object/object.vcxproj.filters
+++ b/object/object.vcxproj.filters
@@ -34,11 +34,11 @@
     <ClCompile Include="obj_lifecycle_management.c">
       <Filter>OOP</Filter>
     </ClCompile>
-    <ClCompile Include="dynamic_memory_management.c">
-      <Filter>OOP</Filter>
-    </ClCompile>
     <ClCompile Include="virtual_func_calling.c">
       <Filter>OOP</Filter>
+    </ClCompile>
+    <ClCompile Include="dynamic_memory_management.c">
+      <Filter>MemoryManagement</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -90,11 +90,14 @@
     <ClInclude Include="obj_lifecycle_management.h">
       <Filter>OOP</Filter>
     </ClInclude>
-    <ClInclude Include="dynamic_memory_management.h">
-      <Filter>OOP</Filter>
-    </ClInclude>
     <ClInclude Include="virtual_func_calling.h">
       <Filter>OOP</Filter>
+    </ClInclude>
+    <ClInclude Include="COOP.h">
+      <Filter>Infra</Filter>
+    </ClInclude>
+    <ClInclude Include="dynamic_memory_management.h">
+      <Filter>MemoryManagement</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
