--- a/Object_unitTest/Object_unitTest.vcxproj
+++ b/Object_unitTest/Object_unitTest.vcxproj
@@ -49,7 +49,6 @@
     <ClCompile Include="InheritTest.cpp" />
     <ClCompile Include="InMemoryCacheTest.cpp" />
     <ClCompile Include="Object_UnitTest.cpp" />
-    <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -61,6 +60,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\COOP_C_TestProxy\COOP_C_TestProxy.vcxproj">
+      <Project>{806ccfd9-f5a0-480e-8c30-08ee253bad12}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\object\object.vcxproj">
       <Project>{ad764af1-8144-44c6-a7d7-7084b1fac6f2}</Project>
     </ProjectReference>
