--- a/orgenized COOP/COOP/COOP_C_TestProxy/COOP_C_TestProxy.vcxproj.filters
+++ b/orgenized COOP/COOP/COOP_C_TestProxy/COOP_C_TestProxy.vcxproj.filters
@@ -1,17 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
+    <ClCompile Include="CacheTest.c" />
+    <ClCompile Include="ExeptionTest.c" />
+    <ClCompile Include="InheritTest.c" />
+    <ClCompile Include="Mat.c" />
+    <ClCompile Include="Mat4Test.c" />
+    <ClCompile Include="ObjectTest.c" />
+    <ClCompile Include="ScopeTest.c" />
+    <ClCompile Include="SuperMat.c" />
+    <ClCompile Include="SuperMat3_4Test.c" />
+    <ClCompile Include="SuperMat4Test.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CacheTest.h" />
+    <ClInclude Include="ExeptionTest.h" />
+    <ClInclude Include="Imports.h" />
+    <ClInclude Include="InheritTest.h" />
+    <ClInclude Include="Mat.h" />
+    <ClInclude Include="Mat4Test.h" />
+    <ClInclude Include="ObjectTest.h" />
+    <ClInclude Include="ProxyExportDefs.h" />
+    <ClInclude Include="ScopeTest.h" />
+    <ClInclude Include="SuperMat.h" />
+    <ClInclude Include="SuperMat3_4Test.h" />
+    <ClInclude Include="SuperMat4Test.h" />
   </ItemGroup>
 </Project>
