--- a/orgenized COOP/COOP/COOP/COOP.vcxproj.filters
+++ b/orgenized COOP/COOP/COOP/COOP.vcxproj.filters
@@ -1,17 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Infra">
+      <UniqueIdentifier>{e7cd9cba-2fc9-4c9e-8945-ee722a9e99ff}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
+    <Filter Include="MemoryManagement">
+      <UniqueIdentifier>{6179e962-d66d-48bb-925f-0dc1ddf35f6b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="OOP">
+      <UniqueIdentifier>{ca4fd2a6-1229-4bef-a116-c98d5c62a5eb}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="COOP.h">
+      <Filter>Infra</Filter>
+    </ClInclude>
+    <ClInclude Include="ExportDefs.h">
+      <Filter>Infra</Filter>
+    </ClInclude>
+    <ClInclude Include="Cache.h">
+      <Filter>MemoryManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="dynamic_memory_management.h">
+      <Filter>MemoryManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="HeapCache.h">
+      <Filter>MemoryManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="iCache.h">
+      <Filter>MemoryManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="class_def_macros.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
+    <ClInclude Include="inheritence_def_macros.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
+    <ClInclude Include="obj_base_structs.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
+    <ClInclude Include="obj_lifecycle_management.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
+    <ClInclude Include="object.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
+    <ClInclude Include="virtual_func_calling.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Cache.c">
+      <Filter>MemoryManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="dynamic_memory_management.c">
+      <Filter>MemoryManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="HeapCache.c">
+      <Filter>MemoryManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="iCache.c">
+      <Filter>MemoryManagement</Filter>
+    </ClCompile>
+    <ClCompile Include="obj_lifecycle_management.c">
+      <Filter>OOP</Filter>
+    </ClCompile>
+    <ClCompile Include="virtual_func_calling.c">
+      <Filter>OOP</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
