refactoring ObjectTest.c into two test sets - one for scopes and one for memory. (and refactoring the tests themselves)

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 /x64/Release
 /x64/bin
 /COOP_C_TestProxy/x64/Debug
+/COOP/x64/Debug
+/UnitTests/x64/Debug
+/COOP_C_TestProxy/COOP_C_TestProxy.vcxproj.user
+/UnitTests/UnitTests.vcxproj.user
